--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis itaque nisi dolorum commodi quos quaerat vel molestias dolorem cumque illo laudantium iste, voluptatibus autem facilis quasi voluptates sint blanditiis quis!</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nobis? Corporis recusandae illo nihil tenetur amet. Doloribus modi repudiandae possimus est, nulla earum fugiat rerum tenetur, qui assumenda, sapiente non!</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae corrupti architecto ratione unde accusantium repudiandae obcaecati, inventore dignissimos illo molestias nisi ipsa at beatae quo. Porro perferendis saepe magni officia.</p>
+        <main>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis itaque nisi dolorum commodi quos quaerat vel molestias dolorem cumque illo laudantium iste, voluptatibus autem facilis quasi voluptates sint blanditiis quis!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nobis? Corporis recusandae illo nihil tenetur amet. Doloribus modi repudiandae possimus est, nulla earum fugiat rerum tenetur, qui assumenda, sapiente non!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae corrupti architecto ratione unde accusantium repudiandae obcaecati, inventore dignissimos illo molestias nisi ipsa at beatae quo. Porro perferendis saepe magni officia.</p>
+        </main>
         
         <script src="" async defer></script>
     </body>
