added footer to page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis itaque nisi dolorum commodi quos quaerat vel molestias dolorem cumque illo laudantium iste, voluptatibus autem facilis quasi voluptates sint blanditiis quis!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, nobis? Corporis recusandae illo nihil tenetur amet. Doloribus modi repudiandae possimus est, nulla earum fugiat rerum tenetur, qui assumenda, sapiente non!</p>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae corrupti architecto ratione unde accusantium repudiandae obcaecati, inventore dignissimos illo molestias nisi ipsa at beatae quo. Porro perferendis saepe magni officia.</p>
+
+        <footer>
+            <p>This is my new footer!</p>
+        </footer>
         
         <script src="" async defer></script>
     </body>
